# cairn

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: main.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: error.rs  lib.rs  model.rs  snapshot.rs  vault_format.rs
docs/: PRODUCT_BRIEF.md  RECOVERY_MODEL.md  ROADMAP.md  SECURITY_INVARIANTS.md  TEST_PLAN.md  THREAT_MODEL.md  VAULT_FORMAT.md
docs/ADR/: 0001-name-and-positioning.md  0002-rust-core-cli-first.md  0003-monolithic-vault-format-v1.md
