[package]
name = "cairn-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and vault format scaffolding for Cairn."

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1.8"
